--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@ a{
 }
 
 .btn{
-    background: #FFF;
     color: #212121;
     padding: 14px 25px;
     font-size: 16px ;
@@ -31,4 +30,11 @@ a{
     cursor: pointer;
     border: 0;
     outline: 0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.btn img{
+    width: 20px;
+    margin-left: 10px;
 }
